// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Snackbar can be active 1`] = `
<div
  aria-atomic="true"
  aria-hidden="true"
  aria-live="assertive"
  className="mdc-snackbar mdc-snackbar--active"
>
  <div
    className="mdc-snackbar__text"
  >
    foo
  </div>
  
</div>
`;

exports[`components/Snackbar can have a timeout 1`] = `
<div
  aria-atomic="true"
  aria-hidden="true"
  aria-live="assertive"
  className="mdc-snackbar mdc-snackbar--active"
>
  <div
    className="mdc-snackbar__text"
  >
    foo
  </div>
  
</div>
`;

exports[`components/Snackbar can have an action text 1`] = `
<div
  aria-atomic="true"
  aria-hidden="true"
  aria-live="assertive"
  className="mdc-snackbar mdc-snackbar--active"
>
  <div
    className="mdc-snackbar__text"
  >
    foo
  </div>
  
</div>
`;

exports[`components/Snackbar can have an actionOnBottom 1`] = `
<div
  aria-atomic="true"
  aria-hidden="true"
  aria-live="assertive"
  className="mdc-snackbar mdc-snackbar--active mdc-snackbar--action-on-bottom mdc-snackbar--action-on-bottom"
>
  <div
    className="mdc-snackbar__text"
  >
    foo
  </div>
  
</div>
`;

exports[`components/Snackbar can have be multiline 1`] = `
<div
  aria-atomic="true"
  aria-hidden="true"
  aria-live="assertive"
  className="mdc-snackbar mdc-snackbar--active mdc-snackbar--multiline"
>
  <div
    className="mdc-snackbar__text"
  >
    foo
  </div>
  
</div>
`;

exports[`components/Snackbar can start aligned 1`] = `
<div
  aria-atomic="true"
  aria-hidden="true"
  aria-live="assertive"
  className="mdc-snackbar mdc-snackbar--active mdc-snackbar--align-start"
>
  <div
    className="mdc-snackbar__text"
  >
    foo
  </div>
  
</div>
`;
